# mdrs-ssam

./: .gitignore  README  Readme.md  build.sh  deploy.py  install_ros.sh  launch.py  launch.sh  remote.py  ros_distro.sh
devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
devel/lib/pkgconfig/: ssam_control.pc  ssam_simulation.pc
devel/lib/ssam_control/: test_control_node  test_control_node2
devel/share/ssam_control/cmake/: ssam_controlConfig.cmake
devel/share/ssam_simulation/cmake/: ssam_simulationConfig.cmake
src/ssam_control/: CMakeLists.txt  package.xml
src/ssam_control/config/: controllers.yaml  costmap_common_params.yaml
src/ssam_control/firmware/: CMakeLists.txt  wheel_controller.cpp
src/ssam_control/include/ssam_control/: hardware_interface.hpp
src/ssam_control/launch/: scout_control.launch  scout_control.xml  scout_localization.launch
src/ssam_control/src/: .test_control_node.cpp.swp  .test_control_node2.cpp.swp  scout_control.cpp  test_control_node.cpp  test_control_node2.cpp
src/ssam_core/: CMakeLists.txt  package.xml
src/ssam_core/launch/: scout_rviz.launch  scout_startup.launch
src/ssam_core/models/scout/: parameter.xacro  scout.xacro
src/ssam_core/rviz/: scout.rviz
src/ssam_localization/: CMakeLists.txt  package.xml
src/ssam_localization/config/: ekf_localization_config.yaml
src/ssam_localization/launch/: ekf_scout_localization.launch  localization_monitor.launch
src/ssam_localization/src/: localization_simulator.cpp
src/ssam_navigation/: CMakeLists.txt  package.xml
src/ssam_navigation/config/: costmap_common_params.yaml  global_costmap_params.yaml  grid_map_viz.yaml  mbf_config.yaml  planner_dwa.yaml  planner_teb.yaml
src/ssam_navigation/launch/: scout_navigation.xml
src/ssam_navigation/scripts/: relay.py
src/ssam_navigation/src/: ssam_nav_server.cpp  ssam_nav_server.h  ssam_nav_server_node.cpp
src/ssam_navigation/src/global_planner/: a_star_global_planner.cpp  a_star_global_planner.h
src/ssam_navigation/src/local_planner/: dwa_planner.cpp  dwa_planner.h  dwa_planner_ros.cpp  dwa_planner_ros.h  gridmap_model.cpp  gridmap_model.h  latched_stop_rotate_controller.cpp  latched_stop_rotate_controller.h  map_grid.cpp  map_grid.h  map_grid_cost_function.cpp  map_grid_cost_function.h  obstacle_cost_function.cpp  obstacle_cost_function.h
src/ssam_simulation/: CMakeLists.txt  package.xml
src/ssam_simulation/launch/: multiple_scout_simulation.launch  scout_mapping.launch  scout_navigation.launch  scout_simulation.launch  scout_spawn.xml  scout_startup.xml  spawn_scouts.launch
src/ssam_simulation/map/: scout_test_map.yaml
src/ssam_simulation/models/scout/: parameter.xacro  scout.gazebo  scout.xacro
src/ssam_simulation/models/terrain_mars/: model.config  model.sdf
src/ssam_simulation/rviz/: navigation.rviz  scout_simulation.rviz
src/ssam_simulation/src/gazebo/: localization_ground_truth.cpp  localization_ground_truth.h  map_odometry_linker.cpp  map_odometry_linker.h
src/ssam_simulation/worlds/: mars_world.world  test_world.world
