<?xml version="1.0"?>
<package format="2">
  <name>ssam_control</name>
  <version>0.0.0</version>
  <description>The ssam_control package</description>

  <maintainer email="tibi@todo.todo">tibi</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_manager</depend>
  <depend>rosserial_arduino</depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>

</package>
