<?xml version="1.0"?>
<package format="2">

  <name>ssam_core</name>
  <version>0.0.0</version>
  <description>The ssam_core package</description>

  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>robot_localization</exec_depend>

</package>
