<?xml version="1.0"?>
<package format="2">
  <name>ssam_simulation</name>
  <version>0.0.0</version>
  <description>The ssam_simulation package</description>

  <maintainer email="tibi@todo.todo">tibi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>gazebo_ros</buildtool_depend>
  <buildtool_depend>gazebo_plugins</buildtool_depend>
  
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>xacro</exec_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models" />
  </export>

</package>
